--- a/02-atributos.html
+++ b/02-atributos.html
@@ -9,6 +9,9 @@
 <body>
         <h1 title="hola mundo">Atributos</h1>
         <img src="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg" alt="casa">
+<body>
+        <h1 title="hola mundo">Atributos</h1>
+        <img src="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg" alt="casa">
 
         <br>
 
