--- a/index.html
+++ b/index.html
@@ -177,5 +177,12 @@
     <a href="02-atributos.html" target="_top">ir a atributos</a>
     <br>
     <a href="./holamundo.txt" download="sdas">Descargar archivo TXT</a>
-</body>
+    
+    <hr>
+    <br>
+    <img src="./logo-html.png" alt="couldn't find it">
+
+
+
+  </body>
 </html>
